# advent_of_code_2020

./: README.md  day_1.py  day_10.py  day_11.py  day_12.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  main.py  read_as.py  test_all_days.py
2016/aoc-haskell/: README.md  aoc-haskell.cabal  package.yaml
2016/aoc-haskell/dist-newstyle/cache/: plan.json
2016/aoc-haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Lib.hs
2016/aoc-haskell/test/: Spec.hs
2018/: Cargo.toml
2018/benches/: all_days.rs
2018/src/: computer.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs  tmp.txt
2020/: day_1.py  day_10.py  day_13.py  day_19.py  day_20.py  day_21.py  day_23.py  day_26.py  day_3.py  day_4.py  day_6.py  day_8.py  day_9.py  read_as.py  test_all_days.py
