[package]
name = "aoc_2018"
version = "0.1.0"
authors = ["ajmorton <ajmorton2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.0"}
regex = { version = "1.4.2"}
lazy_static = { version = "1.4.0"}

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "all_days"
harness = false
